# extended-c-macro-processor

./: .clang-format  .gitignore  AUTHORS.md  LICENSE.md  README.md  flake.nix
xcmgen/: default.nix  pyproject.toml
xcmgen/src/config/: config.py
xcmgen/src/utils/: name_utils.py
xcmp/: .gitignore  configure.ac  default.nix
xcmp/src/: Makefile.am  main.cc
xcmp/src/ast/: Makefile.am  all.hh  ast.cc  ast.hh  ast.hxx  document.cc  document.hh  document.hxx  fwd.hh  identifier.cc  identifier.hh  identifier.hxx  macro-call.cc  macro-call.hh  macro-call.hxx  macro-def.cc  macro-def.hh  macro-def.hxx  pretty-printer.cc  pretty-printer.hh  pretty-printer.hxx  text.cc  text.hh  text.hxx  visitor.hh  visitor.hxx
xcmp/src/misc/: Makefile.am
xcmp/src/misc/containers/: local.am  scoped_map.hh  scoped_map.hxx
xcmp/src/parse/: Makefile.am  driver.cc  driver.hh  driver.hxx  lexer.hh  lexer.ll  location.hh  parser.yy
xcmp/src/parse/tests/: Makefile.am  lex.cc  parse.cc
xcmp/src/process/: Makefile.am  process.cc  process.hh  processor.cc  processor.hh
