lib_LTLIBRARIES = libast.la

libast_la_SOURCES = \
	all.hh \
	fwd.hh \
	ast.hh \
	ast.hxx \
	ast.cc \
	text.hh \
	text.hxx \
	text.cc \
	identifier.hh \
	identifier.hxx \
	identifier.cc \
	macro-def.hh \
	macro-def.hxx \
	macro-def.cc \
	macro-call.hh \
	macro-call.hxx \
	macro-call.cc

libast_la_CPPFLAGS = -I$(top_srcdir)/src

libast_la_CXXFLAGS = -std=c++20 -Werror -Wall -Wextra -Wold-style-cast
