lib_LTLIBRARIES = libast.la

libast_la_SOURCES = \
	all.hh \
	fwd.hh \
	ast.hh \
	ast.hxx \
	ast.cc \
	text.hh \
	text.hxx \
	text.cc \
	identifier.hh \
	identifier.hxx \
	identifier.cc \
	document.hh \
	document.hxx \
	document.cc \
	macro-def.hh \
	macro-def.hxx \
	macro-def.cc \
	macro-call.hh \
	macro-call.hxx \
	macro-call.cc \
	visitor.hh \
	visitor.hxx \
	pretty-printer.hh \
	pretty-printer.hxx \
	pretty-printer.cc

libast_la_CPPFLAGS = -I$(top_srcdir)/src

libast_la_CXXFLAGS = -std=c++23 -Werror -Wall -Wextra -Wold-style-cast
